// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigFeatureFlagsStateless renders children when confiFeatureFlags=true 1`] = `
<p>
  Congrat! You have the right access.
</p>
`;

exports[`ConfigFeatureFlagsStateless renders custom noAccessComponent when confiFeatureFlags=false 1`] = `
<p>
  No! No! No! Go away.
</p>
`;

exports[`ConfigFeatureFlagsStateless renders nothing when confiFeatureFlags=false 1`] = `""`;

exports[`ConfigFeatureFlagsStateless renders nothing when no props are given 1`] = `""`;

exports[`ConfigFeatureFlagsStateless renders nothing when no props are given 2`] = `""`;
